--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@fontsource/roboto": "^5.1.0",
     "@mui/icons-material": "^5.15.21",
-    "@mui/material": "^5.14.18",
+    "@mui/material": "^5.16.7",
+    "@mui/styled-engine-sc": "^6.1.4",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -15,6 +17,7 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.3",
     "formik": "^2.4.5",
+    "he": "^1.2.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.4",
@@ -23,6 +26,7 @@
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "styled-components": "^6.1.13",
     "swiper": "^11.1.4",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
